substrate/frame/support/test/tests/benchmark_ui/extra_extra.stderr
error: unexpected end of input, `extra` can only be specified once
  --> tests/benchmark_ui/extra_extra.rs:26:26
   |
26 |     #[benchmark(extra, extra)]
   |                             ^
